# new_doc_platform

./: CLAUDE.md  README.md  plan_normalization.md  plan_resolution.md  pyproject.toml  report.normalized.json
aarc_example_pack/: README.txt  registry_demo_aarc_1_1.json
data/: expected_normalized_md.json  expected_normalized_rst.json  golden_minimal.md  golden_minimal.rst  registry.json
examples/: 1normalization_example.py
examples/demo_report/: README.md  build.py
examples/extended_report/: build.py  generate_artifacts.py
examples/pipeline_stages_demo/: README.md  build.py
examples/rst_source/: PIPELINE_NOTES.md  build.py  build2.py  index.rst  (+1 more)
implementation/: 01_normalization.md  02_resolution.md  03_validation.md  04_filtering.md  05_rendering.md  06_pdf_theming.md  07_html_site_navigation.md
plans/: plan_HTML_theming.md  plan_PDF_theming.md  plan_filters.md  plan_rendering.md  plan_validation.md
spec/: Analysis Artifact Payload Specs.v1.md  Analysis Artifact Registry Contract (AARC)v1.1.md  Appendix_HTML_Theming_Contract.md  Appendix_PDF_Theming_Contract.md  Resolution Spec.v1.md  architecture.md  ast_invariants.md  authoring_convention_md.md  authoring_convention_rst.md  authoring_conventions.md  canonical_model_n_contract.md  dependencies.md  error_codes.md  filter_design.md  initial_concept.md  normalization_v1.md  rendering_stage_specification.md  user_guide_mental_model.md
test/: test_filters.py  test_golden_md.py  test_golden_rst.py  test_render.py  test_resolver.py  test_smoke_harness.py  test_theming.py  test_validators.py
(+220 files in other folders)
